# Foresight

./: .gitignore  Dockerfile  LICENSE  README.md  docker-composer.yml  readme.md  requirements.txt
API/: Dockerfile  docker-composer.yml  readme.md  requirements.txt
API/app/: auth.py  main.py  routes.py  utils.py
API_MODELO/server/: Dockerfile  main.py
app/: auth.py  main.py  routes.py  utils.py
data/raw/: monsters.json
docs/: dictionary_raw.md  mkdocs.yml
docs/docs/: index.md
foresight/: Makefile  experiments.py  pyproject.toml
foresight/foresight/: __init__.py  dataset.py  features.py  plots.py
foresight/modeling/: predict.py  train.py
models/: gen_data_requirements.txt
models/foresight_cbc/: classification_report.json  classification_report.md  foresight_cbc.py  scrip_foresight.chuy
models/foresight_knn/: foresight_knn.py  scrip_foresight.chuy
models/foresight_lgbm/: foresight_lgbm.py  scrip_foresight.chuy
models/foresight_nn/: classification_report.json  foresight_nn.py  script_foresight.chuy
models/foresight_preprocess/: foresight_preprocess.py  script_foresight.chuy
models/foresight_xgb/: classification_report.json  classification_report.md  foresight_xgb.py  (+1 more)
notebooks/: 00_data_cleaning.ipynb  00_data_cleanning.ipynb  00_eda.ipynb  00_eda_2.ipynb  01_eda.ipynb  01_eda_player_1.ipynb  01_models.ipynb  02_modeling_GLC.ipynb  10_preprocessing.ipynb  11_knn_model.ipynb  12_xgboost_model.ipynb  13_decisiontree_model.ipynb  13_randomforest_model.ipynb  DND_Fetcher.ipynb  foresight_nn.py
reports/: Cahmpion.md  mlflow_experiments_report.md
(+25 files in other folders)
